[tool.poetry]
name = "drake-blender-recorder"
version = "0.1.0"
description = "Tools for replaying Drake simulations in Blender"
authors = ["Nicholas Pfaff <nepfaff@mit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
drake = { version = ">=0.0.20250118 <1.0", source = "drake-nightly" }
manipulation = {git = "https://github.com/RussTedrake/manipulation.git", rev = "58406c315e9663857456f12ed6be5b33dec27ddb"}
numpy = "^2.2.0"
bpy = "4.0.0"
flask = "^3.1.0"
fake-bpy-module = "^20250207"
tqdm = "^4.67.1"
opencv-python = "^4.11.0.86"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.12.1"
isort = "^5.12.0"
poetry-pre-commit-plugin = "^0.1.2"

[[tool.poetry.source]]
name = "drake-nightly"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
priority = "explicit"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true
known_first_party = ['drake_blender_recorder']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"